--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,10 +19,11 @@ a:visited {
 
 header {
     height: 135px;
-    background-color: rgb(25, 10, 19, 0.8);
+    background-color: white;
     width: 100%;
-    color: white;
+    color: black;
     z-index: 1;
+    border-bottom: 1px solid #f2f2f2;
 }
 
 .center-box {
